<resources>
    <string name="store_picture_title">Save image</string>
    <string name="store_picture_message">Allow Ad to store image in Picture gallery?</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="create_calendar_title">Create calendar event</string>
    <string name="create_calendar_message">Allow Ad to create a calendar event?</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_notification_needs_installation_title">An application requires installation of Google Play services.</string>
    <string name="common_google_play_services_notification_needs_update_title">An application requires an update for Google Play services.</string>
    <string name="common_android_wear_notification_needs_update_text">An application requires an update to the Android Wear app.</string>
    <string name="common_google_play_services_needs_enabling_title">An application requires Google Play services to be enabled.</string>
    <string name="common_google_play_services_error_notification_requested_by_msg">Requested by %1$s</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">"This app won't run without Google Play services, which are missing from your phone."</string>
    <string name="common_google_play_services_install_text_tablet">"This app won't run without Google Play services, which are missing from your tablet."</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">"This app won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_android_wear_update_title">Update Android Wear</string>
    <string name="common_google_play_services_update_text">"This app won't run unless you update Google Play services."</string>
    <string name="common_android_wear_update_text">"This app won't run unless you update the Android Wear app."</string>
    <string name="common_google_play_services_network_error_title">Network Error</string>
    <string name="common_google_play_services_network_error_text">A data connection is required to connect to Google Play services.</string>
    <string name="common_google_play_services_invalid_account_title">Invalid Account</string>
    <string name="common_google_play_services_invalid_account_text">The specified account does not exist on this device. Please choose a different account.</string>
    <string name="common_google_play_services_unknown_issue">Unknown issue with Google Play services.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_unsupported_text">Google Play services, which some of your applications rely on, is not supported by your device. Please contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="wallet_buy_button_place_holder">Buy with Google</string>
    <string name="lb_navigation_menu_contentDescription">Navigation menu</string>
    <string name="orb_search_action">Search Action</string>
    <string name="lb_search_bar_hint">Search</string>
    <string name="lb_search_bar_hint_speech">Speak to search</string>
    <string name="lb_search_bar_hint_with_title">Search %1$s</string>
    <string name="lb_search_bar_hint_with_title_speech">Speak to search %1$s</string>
    <string name="lb_control_display_fast_forward_multiplier">%1$dX</string>
    <string name="lb_control_display_rewind_multiplier">%1$dX</string>
    <string name="lb_playback_controls_play">Play</string>
    <string name="lb_playback_controls_pause">Pause</string>
    <string name="lb_playback_controls_fast_forward">Fast Forward</string>
    <string name="lb_playback_controls_fast_forward_multiplier">Fast Forward %1$dX</string>
    <string name="lb_playback_controls_rewind">Rewind</string>
    <string name="lb_playback_controls_rewind_multiplier">Rewind %1$dX</string>
    <string name="lb_playback_controls_skip_next">Skip Next</string>
    <string name="lb_playback_controls_skip_previous">Skip Previous</string>
    <string name="lb_playback_controls_more_actions">More Actions</string>
    <string name="lb_playback_controls_thumb_up">Deselect Thumb Up</string>
    <string name="lb_playback_controls_thumb_up_outline">Select Thumb Up</string>
    <string name="lb_playback_controls_thumb_down">Deselect Thumb Down</string>
    <string name="lb_playback_controls_thumb_down_outline">Select Thumb Down</string>
    <string name="lb_playback_controls_repeat_none">Repeat None</string>
    <string name="lb_playback_controls_repeat_all">Repeat All</string>
    <string name="lb_playback_controls_repeat_one">Repeat One</string>
    <string name="lb_playback_controls_shuffle_enable">Enable Shuffle</string>
    <string name="lb_playback_controls_shuffle_disable">Disable Shuffle</string>
    <string name="lb_playback_controls_high_quality_enable">Enable High Quality</string>
    <string name="lb_playback_controls_high_quality_disable">Disable High Quality</string>
    <string name="lb_playback_controls_closed_captioning_enable">Enable Closed Captioning</string>
    <string name="lb_playback_controls_closed_captioning_disable">Disable Closed Captioning</string>
    <string name="lb_playback_controls_picture_in_picture">Enter Picture In Picture Mode</string>
    <string name="lb_guidedaction_finish_title">Finish</string>
    <string name="lb_guidedaction_continue_title">Continue</string>
    <string name="lb_date_separator">/</string>
    <string name="lb_time_separator">:</string>
    <string name="lb_onboarding_get_started">GET STARTED</string>
    <string name="lb_onboarding_accessibility_next">Next</string>
    <string name="v7_preference_on">ON</string>
    <string name="v7_preference_off">OFF</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_capital_off">OFF</string>
    <string name="app_name">TVHome Screen</string>
    <string name="app_label">TVHome Screen</string>
    <string name="font">sans-serif-condensed</string>
    <string name="light_font">sans-serif-light</string>
    <string name="regular_font">sans-serif</string>
    <string name="search_hint_text">Search movies, TV, and more</string>
    <string name="focused_search_hint_text">Click to search</string>
    <string name="focused_search_mic_hint_text">Click to speak</string>
    <string name="focused_search_keyboard_hint_text">Click to type</string>
    <string name="edit_uninstall_focused_text">Uninstall</string>
    <string name="edit_finish_button_text">Done</string>
    <string name="category_label_apps">Apps</string>
    <string name="category_label_store">Store</string>
    <string name="category_recent_app">Recent Apps</string>
    <string name="category_label_games">Games</string>
    <string name="category_label_settings" />
    <string name="input_title_bundled_tuner">Channels</string>
    <string name="category_label_inputs">Inputs</string>
    <string name="settings_network">Network Settings</string>
    <string name="notif_service_name">Notifications Service</string>
    <string name="recm_service_name">Recommendations Service</string>
    <string name="install_pending">Install pending…</string>
    <string name="update_pending">Update pending…</string>
    <string name="restore_pending">Restore pending…</string>
    <string name="downloading">Downloading…</string>
    <string name="installing">Installing…</string>
    <string name="unknown_state">…</string>
    <string name="progress_percent">%1$d%%</string>
    <string name="now_playing_card_playing">Now Playing</string>
    <string name="now_playing_card_paused">Paused</string>
    <string name="now_playing_card_stopped">Stopped</string>
    <string name="unknown_title">Unknown</string>
    <string name="unknown_artist">Unknown</string>
    <string name="unknown_album">Unknown</string>
    <string name="unknown_album_artist">Unknown</string>
    <string name="recommendation_row_preparing_message">Preparing Recommendations</string>
    <string name="recommendation_row_empty_message_recs_disabled">"Some recommendations are hidden
To enable, go to Settings"</string>
    <string name="recommendation_row_empty_message_no_recs">No recommendations available at this time</string>
    <string name="recommendation_row_empty_message_no_connection">No internet connection at this time</string>
    <string name="input_source_disconnected">Disconnected</string>
    <string name="input_source_unknown">Unknown</string>
    <string name="language_setting">Language</string>
    <string name="internet_setting">Internet</string>
    <string name="next">Next</string>
    <string name="press_button_below_to_change_the_language">Press button below to change the language</string>
    <string name="back">Back</string>
    <string name="press_button_below_to_enable_internet">Press button below to enable internet</string>
</resources>